# rct-launch-kit

./: .gitignore  README.md  index.html  package-lock.json  package.json  updater.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  ports.rs  projects.rs  runner.rs  settings.rs
src/components/: CloseConfirmModal.tsx  CommandList.tsx  CommandPalette.tsx  Content.tsx  ContextMenu.tsx  ForgeView.tsx  InlineEditName.tsx  LogView.tsx  MenuDropdown.tsx  ProjectView.tsx  Segmented.tsx  SettingsView.tsx  SidePanel.tsx  Sidebar.tsx  SidebarItem.tsx  TabSelector.tsx  TitleBar.tsx  Tooltip.tsx  close-confirm-modal.css  command-list.css  command-palette.css  content.css  context-menu.css  forge-view.css  log-view.css  menu-dropdown.css  segmented.css  settings-view.css  side-panel.css  sidebar.css  tab-selector.css  titlebar.css  tooltip.css
src/lib/: ansi.ts  backend.ts  theme-bridge.ts
src/stores/: logs.ts  metrics.ts  navigation.ts  projects.ts  runs.ts  settings.ts  sidebar.ts  theme.ts  view.ts
src/styles/: theme.css  toast.css
