[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
sysinfo = "0.32"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# netstat2 0.9.1 doesn't compile against modern libc on Linux (reads
# `tcp_info.state` instead of `tcpi_state` and re-globs `__be16`). Use it
# on Windows/macOS where it still works, and read /proc directly on Linux.
[target.'cfg(not(target_os = "linux"))'.dependencies]
netstat2 = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17"
